--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: §¢§Ö§Ô§Ö§Þ§à§ä's House
+title: Homeless
 email: bigmortz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The computer technology blog for Rocky Shi who has been a programmer for 30+ years.
@@ -29,9 +29,12 @@ github_username:  RockyShi
 
 # Build settings
 theme: minima
+remote_theme: daviddarnes/alembic@main
+
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
