--- a/_config.yml
+++ b/_config.yml
@@ -1,56 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: Homeless
-email: bigmortz@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  The computer technology blog for Rocky Shi who has been a programmer for 30+ years.
+name: Rocky Shi # your name
+email: bigmortz@gmail.com # your email address
+description: >
+    A Simple Blog. # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Bigmortz
-github_username:  RockyShi
+url: "" # the base hostname & protocol for your site
+twitter_username: bigmortz # your Twitter username
+github_username: RockyShi # your Github username
+disqus_username: # your disqus username
+
+google-analytics: # add it if you have one
+
+skillstree: false # turn on or off the skills tree in about page
 
 # Build settings
-theme: minima
-remote_theme: daviddarnes/alembic@main
-
-plugins:
-  - jekyll-feed
-  - jekyll-remote-theme
-  
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+permalink: none
+markdown: kramdown
